Update Acea Smart Water Analytics.ipynb

--- a/acea-water-prediction/Acea Smart Water Analytics.ipynb
+++ b/acea-water-prediction/Acea Smart Water Analytics.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"Data/Lake_Bilancino.csv\", index_col = ['Date'], parse_dates=['Date'])"
+    "data = pd.read_csv(\"Lake_Bilancino.csv\", index_col = ['Date'], parse_dates=['Date'])"
    ]
   },
   {
@@ -56,7 +56,7 @@
    "id": "b18f1023",
    "metadata": {},
    "source": [
-    "# Data analysis and processing"
+    "# Data pre-processing"
    ]
   },
   {
